Fix docs on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -27,17 +27,6 @@ body, input {
   box-shadow: none;
 }
 
-/* NAV */
-
-.md-sidebar--primary .md-nav__title {
-  display: none;
-}
-
-.md-nav__link--active {
-  font-weight: bold;
-}
-
-
 /* BODY */
 
 .md-typeset a {
@@ -82,27 +71,39 @@ body, input {
   margin-top: 1.2rem;
 }
 
-.md-nav__item--section>.md-nav__link[for] {
-  text-transform: uppercase;
-  font-size: 0.55rem;
-  padding-bottom: 4px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid #eee;
-  margin-top: 3em;
-}
+@media screen and (min-width:76.1875em) {
+  
+  .md-sidebar--primary .md-nav__title {
+    display: none;
+  }
 
-.md-nav--primary > .md-nav__list > .md-nav__item:first-of-type {
-  margin-bottom: 60px;
-  opacity: .6;
-}
+  .md-nav__link--active {
+    font-weight: bold;
+  }
 
-.md-nav__item--nested>.md-nav__link {
-  cursor: default;
-  color: #999;
-}
+  .md-nav__item--section>.md-nav__link[for] {
+    text-transform: uppercase;
+    font-size: 0.55rem;
+    padding-bottom: 4px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+    margin-top: 3em;
+  }
 
-.md-nav__item--nested>.md-nav__link:hover {
-  color: #999;
+  .md-nav--primary > .md-nav__list > .md-nav__item:first-of-type {
+    margin-bottom: 60px;
+    opacity: .6;
+  }
+
+  .md-nav__item--nested>.md-nav__link {
+    cursor: default;
+    color: #999;
+  }
+
+  .md-nav__item--nested>.md-nav__link:hover {
+    color: #999;
+  }
+
 }
 
 /* Figure */
